// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockVisibility Unsupported should not show visibility settings for "dynamic" blocks 1`] = `
"<!-- wp:paragraph -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->

<!-- wp:archives /-->"
`;

exports[`BlockVisibility Unsupported should not show visibility settings for the classic block 1`] = `
"<!-- wp:paragraph -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->

"
`;

exports[`BlockVisibility should do nothing with default values 1`] = `
"<!-- wp:paragraph -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->"
`;

exports[`BlockVisibility should restrict a block to enrolled users 1`] = `
"<!-- wp:paragraph {\\"llms_visibility\\":\\"enrolled\\",\\"llms_visibility_in\\":\\"any_course\\"} -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->"
`;

exports[`BlockVisibility should restrict a block to enrolled users 2`] = `"<span class=\\"dashicon dashicons dashicons-visibility\\"></span><span class=\\"llms-block-visibility--msg\\">This block is only visible to enrolled users</span>"`;

exports[`BlockVisibility should restrict a block to logged in users 1`] = `
"<!-- wp:paragraph {\\"llms_visibility\\":\\"logged_in\\",\\"llms_visibility_in\\":\\"any_course\\"} -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->"
`;

exports[`BlockVisibility should restrict a block to logged in users 2`] = `"<span class=\\"dashicon dashicons dashicons-visibility\\"></span><span class=\\"llms-block-visibility--msg\\">This block is only visible to logged in users</span>"`;

exports[`BlockVisibility should restrict a block to logged out users 1`] = `
"<!-- wp:paragraph {\\"llms_visibility\\":\\"logged_out\\",\\"llms_visibility_in\\":\\"any_course\\"} -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->"
`;

exports[`BlockVisibility should restrict a block to logged out users 2`] = `"<span class=\\"dashicon dashicons dashicons-visibility\\"></span><span class=\\"llms-block-visibility--msg\\">This block is only visible to logged out users</span>"`;

exports[`BlockVisibility should restrict a block to non-enrolled users 1`] = `
"<!-- wp:paragraph {\\"llms_visibility\\":\\"not_enrolled\\",\\"llms_visibility_in\\":\\"any_course\\"} -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->"
`;

exports[`BlockVisibility should restrict a block to non-enrolled users 2`] = `"<span class=\\"dashicon dashicons dashicons-visibility\\"></span><span class=\\"llms-block-visibility--msg\\">This block is only visible to non-enrolled users or visitors</span>"`;

exports[`BlockVisibility should restrict a block to users in specific courses and/or memberships 1`] = `
"<!-- wp:paragraph {\\"llms_visibility\\":\\"enrolled\\",\\"llms_visibility_in\\":\\"list_all\\"} -->
<p>Lorem ipsum</p>
<!-- /wp:paragraph -->"
`;

exports[`BlockVisibility should restrict a block to users in specific courses and/or memberships 2`] = `"<span class=\\"dashicon dashicons dashicons-visibility\\"></span><span class=\\"llms-block-visibility--msg\\">This block is only visible to enrolled users</span>"`;
